# Kup

./: .gitignore  CMakeLists.txt  MAINTAINER  README  README.md  TODO  regex
daemon/: CMakeLists.txt  backupjob.cpp  backupjob.h  buphelper.cpp  buphelper.h  bupjob.cpp  bupjob.h  buprepairjob.cpp  buprepairjob.h  bupverificationjob.cpp  bupverificationjob.h  edexecutor.cpp  edexecutor.h  fsexecutor.cpp  fsexecutor.h  kup-daemon.desktop  kup-daemon.notifyrc  kupdaemon.cpp  kupdaemon.desktop  kupdaemon.h  kupdaemon.notifyrc  kupdaemon.notifyrc.template  kuphelper.actions  kuphelper.cpp  kuphelper.h  main.cpp  planexecutor.cpp  planexecutor.h  resticjob.cpp  resticjob.h  rsyncjob.cpp  rsyncjob.h
dataengine/: CMakeLists.txt  kupengine.cpp  kupengine.h  kupjob.cpp  kupjob.h  kupservice.cpp  kupservice.h  kupservice.operations  plasma-dataengine-kup.desktop  plasma-dataengine-kup.desktop.template
filedigger/: CMakeLists.txt  filedigger.cpp  filedigger.desktop  filedigger.desktop.template  filedigger.h  fsminer.cpp  fsminer.h  fsminerbup.cpp  fsminerbup.h  fsminerrestic.cpp  fsminerrestic.h  main.cpp  mergedvfs.cpp  mergedvfs.h  mergedvfsbup.cpp  mergedvfsbup.h  mergedvfsmodel.cpp  mergedvfsmodel.h  mergedvfsrestic.cpp  mergedvfsrestic.h  restoredialog.cpp  restoredialog.h  restoredialog.ui  restorejob.cpp  restorejob.h  versionlistdelegate.cpp  versionlistdelegate.h  versionlistmodel.cpp  versionlistmodel.h
icons/: CMakeLists.txt  hi32-action-kuprunning.mng  sc-apps-kup.svgz
kcm/: CMakeLists.txt  backupplanwidget.cpp  backupplanwidget.h  dirselector.cpp  dirselector.h  driveselection.cpp  driveselection.h  driveselectiondelegate.cpp  driveselectiondelegate.h  folderselectionmodel.cpp  folderselectionmodel.h  kbuttongroup.cpp  kbuttongroup.h  kcm_kup.desktop  kcm_kup.desktop.template  kupkcm.cpp  kupkcm.h  planstatuswidget.cpp  planstatuswidget.h
kioslave/: CMakeLists.txt  bup.protocol  bupslave.cpp  bupslave.h  bupvfs.cpp  bupvfs.h  vfshelpers.cpp  vfshelpers.h
libgit2-0.19.0/: CMakeLists.txt
libgit2-0.19.0/src/: odb_pack.c
plasmoid/: metadata.desktop  metadata.desktop.template
plasmoid/contents/ui/: FullRepresentation.qml  Main.qml
po/: CMakeLists.txt  bs_BA.po  cs.po  da.po  de.po  es.po  extract-messages.sh  fr_FR.po  hu_HU.po  it.po  kup.pot  lt_LT.po  nl_NL.po  pl.po  pt_BR.po  ru.po  sv.po  tl.po  translation-HOWTO  zh_CN.po  zh_TW.po
resticcore/: CMakeLists.txt  resticforgetswitch.cpp  resticforgetswitch.h  restichelper.cpp  restichelper.h
runner/: CMakeLists.txt  kuprunner.cpp  kuprunner.h  main.cpp
settings/: CMakeLists.txt  backupplan.cpp  backupplan.h  kupsettings.cpp  kupsettings.h  kuputils.cpp  kuputils.h
